[tool.poetry]
name = "algo-ds-py"
version = "0.1.0"
description = "Python utilities for data structures and algorithms"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "B", # flake9-bugbear
    "I", # isort
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # unused import
]
